--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>© 2025 NEONCUBE — Crafted in small batches.</p>
+            <p>© 2025 Zyra Tech — Crafted in small batches.</p>
         </div>
     </footer>
 
